k8s/apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-svc
  namespace: turinghatch
spec:
  selector:
    app: homepage
  ports:
    - port: 80
      targetPort: 80
      name: http
  type: ClusterIP
